# wmc

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  Makefile  README.md
data/: .gitignore  DISCLAIMER  alarm.num  alarm.wpbdd.ord  andes.part  asia.num  asia.wpbdd.ord  barley.num  cancer.num  cancer.part  cancer.wpbdd.ord  carpo.net  carpo.part  child.num  child.part  child.wpbdd.ord  clean  competitive_asymmetries.net  diabetes.1.num  earthquake.num  earthquake.part  example2.num  fungiuk.134567.part  fungiuk.net  fungiuk.part  hailfinder.num  hepar2.num  hepar2.wpbdd.ord  link.1.num  link.part  mainuk.num  mainuk.part  mainuk.wpbdd.ord  mildew.1.num  mildew.num  mildew.part  munin.1.num  munin.part  munin1.num  munin2.part  (+31 more)
data/dnet/: ALARM.dnet  Boerlage92.dnet  Bouncing.dnet  Cancer_Neapolitan.dnet  Car_Buyer_Neapolitan.dnet  Car_Diagnosis_2.dnet  False_Barrier.dnet  Fire.dnet  HailFinder25.dnet  Inverted_Pendulum.dnet  Matheson90_Space_Mission.dnet  Neapolitan90_p261.dnet  Neapolitan90_p386.dnet  Oil_Wildcatter_Extended.dnet  Oil_Wildcatter_Simplified.dnet  Puterman90_p337.dnet  Separable1.dnet  Separable2.dnet  SpiegelhalterDLC93.dnet  Thermostat_A.dnet  Umbrella.dnet  Zhang93_p121.dnet  Zhang93_p128.dnet  Zhang93_p55.dnet
data/net/: .gitignore  3nt.net  4sp.net  6hj.net  6nt.net  StudFarm.net  aggregate.net  asia2.net  asia3.net  boblo.net  boerlage92.net  cancer_1.net  car_buyer.net  car_ts.net  comp_assym.net  ensimin-action.net  ex-2-8.net  ex-3-1.net  ex-3-10.net  ex-3-11.net  ex-3-12.net  ex-3-14.net  ex-3-14a.net  ex-3-14b.net  ex-3-15.net  ex-3-16.net  ex-3-3-i.net  ex-3-3-ii.net  ex-3-3-iii.net  ex-3-3-iiia.net  ex-3-3-iiib.net  ex-3-4-ii.net  ex-3-4-iv.net  ex-3-5-i.net  ex-3-5-ii.net  ex-3-6-i.net  ex-3-6-ii.net  ex-3-7.net  ex-3-8.net  ex-6-2-bn.net  (+56 more)
data/num/: andes.num  andes.wpbdd.num  asia.num  barley.1.num  barley.wpbdd.num  carpo.num  diabetes.num  fungiuk.num  insurance.num  link.num  mainuk.num  mainuk.wpbdd.num  munin.num  munin1.num  munin2.1.num  munin2.num  munin3.num  munin4.num  pathfinder.num  powerplant.num  survey.num
data/ord/: alarm.obdd.ord  andes.wpbdd.ord  asia.obdd.ord  barley.wpbdd.ord  cancer.obdd.ord  cancer.wpbdd.ord  carpo.obdd.ord  carpo.wpbdd.ord  child.obdd.ord  earthquake.obdd.ord  earthquake.wpbdd.ord  example.obdd.ord  fungiuk.obdd.ord  fungiuk.wpbdd.ord  hailfinder.obdd.ord  hailfinder.wpbdd.ord  hepar2.obdd.ord  insurance.obdd.ord  insurance.wpbdd.ord  mildew.obdd.ord  mildew.wpbdd.ord  pathfinder.obdd.ord  poker.obdd.ord  poker.wpbdd.ord  powerplant.obdd.ord  powerplant.wpbdd.ord  sachs.obdd.ord  sachs.wpbdd.ord  student_farm.obdd.ord  student_farm.wpbdd.ord  survey.obdd.ord  water.obdd.ord  water.wpbdd.ord  weeduk.obdd.ord  weeduk.wpbdd.ord  win95pts.obdd.ord  win95pts.wpbdd.ord
data/part/: alarm.part  asia.part  barley.part  diabetes.part  example.part  fungiuk.134251.part  fungiuk.148651.part  fungiuk.447011.part  hailfinder.part  hepar2.part  insurance.part  munin1.part  partitionexample.part  sachs.part  survey.part  weeduk.part  win95pts.part
data/xdsl/: Figure 03.05.xdsl  Figure 03.06.xdsl  Figure 03.07.xdsl  Figure 03.08.xdsl  Figure 03.09.xdsl  Figure 03.10.xdsl  Figure 03.11.xdsl  Figure 03.12.xdsl  Figure 03.13.xdsl  Figure 03.14.xdsl  Figure 03.15.xdsl  Figure 03.16.xdsl  Figure 03.17.xdsl  Figure 03.18.xdsl  Figure 03.19.xdsl  Figure 03.20.xdsl  Figure 03.32.xdsl  Figure 03.37.xdsl  Figure 03.39.xdsl  Figure 04.03.xdsl  Figure 04.10.xdsl  Figure 04.12.xdsl  Figure 04.25.xdsl  Figure 04.27.xdsl  Figure 04.29.xdsl  Figure 04.31.xdsl  Figure 05.06.xdsl  Figure 05.21.xdsl  Figure 07.03.xdsl  Figure 07.08.xdsl  Figure 07.15.xdsl  Figure 07.21.xdsl  Figure 07.22.xdsl  Figure 12.01.xdsl  Figure 12.02.xdsl  Figure 12.03.xdsl  Figure 12.04.xdsl  Figure 12.08.xdsl  Figure 13.01.xdsl  Figure 13.04.xdsl  (+3 more)
exp/: compare_inference_times  compile_obdds  compile_pwpbdds  compile_sdds  compile_wpbdds  create_orderings  create_partitionings  create_pwpbdd_circuits  create_wpbdd_circuits  networks  read_results
exp/scripts/: analyse_partitioning  compare_inference  compile_obdd  compile_pwpbdd  compile_sdd  compile_wpbdd  create_composition_ordering  create_ordering  create_partitioning  create_pwpbdd_circuit  create_wpbdd_circuit  environment  verify_inference
scripts/: dot2pdf  dot2ps  git-init-all  git-pull  git-pull-all  git-status-all  sync
src/: .gitignore  Makefile
test/: README  run.py  test_compiler
test/partition/: README  run
test/partition/scripts/: gen-bnmc-input  gen-circuits  gen-part  gen-part-py  run  run-circuits
test/test/: .gitignore  bdd.py  experiments.py  main.py  misc.py  run.py
test/test/test/: __init__.py  bdd.py  experiments.py  globals.py  main.py  misc.py  tmp.py
usr/: .gitignore
usr/include/dlib/: config.h  dlib.h
usr/include/queue/: atomicops.h  blockingmultiqueue.h  singlequeue.h
usr/lib64/: libagrum.so.0  libgsl.la  libgsl.lai  libgsl.so.19  libgslcblas.la  libgslcblas.so.0.0.0
usr/lib64/pkgconfig/: agrum.pc  bddc.pc  gsl.pc
usr/src/Ace/: ace.py
usr/tar/: dlib-18.18.tar.xz
